<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinDetailActivity">

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="#63000000"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/tvCoinInfoUpdatedAtTitle"
        android:layout_width="110dp"
        android:layout_height="22dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/coin_info_update"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/tvCoinInfoUpdatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/coin_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintStart_toEndOf="@+id/tvCoinInfoUpdatedAtTitle"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        tools:text="1723.2" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="#63000000"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tvStockExchangeNameTitle"
        android:layout_width="110dp"
        android:layout_height="22dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/coin_last_trade_stock_exchange_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/tvStockExchangeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/coin_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintStart_toEndOf="@+id/tvStockExchangeNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        tools:text="Bitfinex" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="#63000000"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tvMaxPerDayPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/coin_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintStart_toEndOf="@+id/tvMaxPerDayTitle"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        tools:text="1723.2" />

    <TextView
        android:id="@+id/tvMaxPerDayTitle"
        android:layout_width="110dp"
        android:layout_height="22dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/coin_max_cost_per_day"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/tvMinPerDayPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/coin_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/tvMinPerDayTitle"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:text="440.00" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="#63000000"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:layout_editor_absoluteX="-15dp" />

    <TextView
        android:id="@+id/tvMinPerDayTitle"
        android:layout_width="110dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/coin_min_cost_per_day"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageView
        android:id="@+id/ivLogoCoin"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
        app:layout_constraintEnd_toStartOf="@+id/tvSlash"
        app:layout_constraintTop_toTopOf="@+id/tvSlash"
        app:layout_constraintVertical_bias="1.0"
        tools:text="BTC " />

    <TextView
        android:id="@+id/tvSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/slash"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoCoin"
        tools:text="/" />

    <TextView
        android:id="@+id/tvToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
        app:layout_constraintStart_toEndOf="@+id/tvSlash"
        app:layout_constraintTop_toTopOf="@+id/tvSlash"
        tools:text=" USD" />

    <TextView
        android:id="@+id/tvPriceTitle"
        android:layout_width="110dp"
        android:layout_height="22dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="6dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/coin_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSlash" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="6dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/coin_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/tvPriceTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvSlash"
        tools:text="1723.2" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="83dp"
        android:background="#63000000"
        app:layout_constraintTop_toBottomOf="@+id/tvSlash" />

</androidx.constraintlayout.widget.ConstraintLayout>